[VK] Fix hangouts app overscrolling.

In UpdateInsetsForWindow, we assume that a window can only have one
RenderWidgetHostView. However, it looks like for the hangouts app,
the window has multiple RenderWidgetHostViews, all of which need to
be updated.

Test: Manual
Bug: 764211
Change-Id: I1c9b60e4c1f9a05a0c9e0c6683c72781115ee925
Reviewed-on: https://chromium-review.googlesource.com/1215424
Reviewed-by: Yuichiro Hanada <yhanada@chromium.org>
Commit-Queue: Darren Shen <shend@chromium.org>
Cr-Commit-Position: refs/heads/master@{#589855}
Former-commit-id: a542d97ac1e836a66ff60e1b307d62efeb530650